--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CSS Buttons</title>
+    <link rel="stylesheet" type="text/css" href="/dist/css/css-btns.css" />
 </head>
 <body>
     CSS Buttons......
