started btns styles

--- a/index.html
+++ b/index.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>CSS Buttons</title>
-    <link rel="stylesheet" type="text/css" href="/dist/css/css-btns.css" />
+    <link rel="stylesheet" type="text/css" href="/dist/css/css-btns.css?1" />
+    <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
 </head>
 <body>
-    CSS Buttons......
+    <div class="examples">
+        <div class="example">
+            <div class="title">Default btn</div>
+            <div class="css-btn">Default btn</div>
+        </div>
+        <div class="example">
+            <div class="title">Colors</div>
+            <div class="css-btn css-btn-black">Black btn</div>
+            <div class="css-btn css-btn-tan">Tan btn</div>
+            <div class="css-btn css-btn-blue">Blue btn</div>
+            <div class="css-btn css-btn-azure">Azure btn</div>
+            <div class="css-btn css-btn-olive">Olive btn</div>
+            <div class="css-btn css-btn-golden">Golden btn</div>
+            <div class="css-btn css-btn-salmon">Salmon btn</div>
+            <div class="css-btn css-btn-red">Red btn</div>
+        </div>
+        <div class="example">
+            <div class="title">Border Radius</div>
+            <div class="css-btn css-btn-azure css-br">Azure btn</div>
+            <div class="css-btn css-btn-azure css-br-lg">Azure btn</div>
+            <div class="css-btn css-btn-azure css-br-cc">+</div>
+        </div>
+    </div>
 </body>
 </html>
