--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CSS Buttons</title>
-    <link rel="stylesheet" type="text/css" href="/dist/css/css-btns.css?1" />
+    <link rel="stylesheet" type="text/css" href="dist/css/css-btns.css?1" />
     <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
 </head>
 <body>
