added sizes for buttons

--- a/index.html
+++ b/index.html
@@ -29,6 +29,30 @@
             <div class="css-btn css-btn-azure css-br-lg">Azure btn</div>
             <div class="css-btn css-btn-azure css-br-cc">+</div>
         </div>
+        <div class="example">
+            <div class="title">Sizes</div>
+            <div class="item">
+                <div class="title">Small Buttons</div>
+                <div class="css-btn css-btn-azure css-btn-sm">Azure btn</div>
+                <div class="css-btn css-btn-azure css-btn-sm css-br">Azure btn</div>
+                <div class="css-btn css-btn-azure css-btn-sm css-br-lg">Azure btn</div>
+                <div class="css-btn css-btn-azure css-btn-sm css-br-cc">+</div>
+            </div>
+            <div class="item">
+                <div class="title">Default Buttons</div>
+                <div class="css-btn css-btn-azure">Azure btn</div>
+                <div class="css-btn css-btn-azure css-br">Azure btn</div>
+                <div class="css-btn css-btn-azure css-br-lg">Azure btn</div>
+                <div class="css-btn css-btn-azure css-br-cc">+</div>
+            </div>
+            <div class="item">
+                <div class="title">Large Buttons</div>
+                <div class="css-btn css-btn-azure css-btn-lg">Azure btn</div>
+                <div class="css-btn css-btn-azure css-btn-lg css-br">Azure btn</div>
+                <div class="css-btn css-btn-azure css-btn-lg css-br-lg">Azure btn</div>
+                <div class="css-btn css-btn-azure css-btn-lg css-br-cc">+</div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
