break btns sass and main sass styles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>CSS Buttons</title>
-    <link rel="stylesheet" type="text/css" href="dist/css/css-btns.css?1" />
+    <link rel="stylesheet" type="text/css" href="dist/css/css-btns.css" />
+    <link rel="stylesheet" type="text/css" href="dist/css/main.css" />
     <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
 </head>
 <body>
