added gradient and active classes

--- a/index.html
+++ b/index.html
@@ -54,6 +54,23 @@
                 <div class="css-btn css-btn-azure css-btn-lg css-br-cc">+</div>
             </div>
         </div>
+        <div class="example">
+            <div class="title">Gradients</div>
+            <div class="css-btn css-br css-btn-black cb-g">Black btn</div>
+            <div class="css-btn css-br css-btn-tan cb-g">Tan btn</div>
+            <div class="css-btn css-br css-btn-blue cb-g">Blue btn</div>
+            <div class="css-btn css-br css-btn-azure cb-g">Azure btn</div>
+            <div class="css-btn css-br css-btn-olive cb-g">Olive btn</div>
+            <div class="css-btn css-br css-btn-golden cb-g">Golden btn</div>
+            <div class="css-btn css-br css-btn-salmon cb-g">Salmon btn</div>
+            <div class="css-btn css-br css-btn-red cb-g">Red btn</div>
+        </div>
+        <div class="example">
+            <div class="title">Active</div>
+            <div class="css-btn css-btn-azure cb-active">Azure btn</div>
+            <div class="css-btn css-br css-btn-azure cb-active">Azure btn</div>
+            <div class="css-btn css-br css-btn-azure cb-g cb-active">Azure btn</div>
+        </div>
     </div>
 </body>
 </html>
