added shadows for btns

--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
             <div class="css-btn css-br css-btn-azure cb-active">Azure btn</div>
             <div class="css-btn css-br css-btn-azure cb-g cb-active">Azure btn</div>
         </div>
+        <div class="example">
+            <div class="title">Shadow</div>
+            <div class="css-btn css-btn-azure cb-shadow">Azure btn</div>
+            <div class="css-btn css-br css-btn-azure cb-shadow">Azure btn</div>
+            <div class="css-btn css-br css-btn-azure cb-g cb-shadow">Azure btn</div>
+        </div>
     </div>
 </body>
 </html>
