--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
             <div class="css-btn css-br css-btn-azure cb-shadow">Azure btn</div>
             <div class="css-btn css-br css-btn-azure cb-g cb-shadow">Azure btn</div>
         </div>
+        <div class="example">
+            <div class="title">Animations</div>
+            <div class="css-btn css-br css-btn-azure cb-shadow cb-a cb-at">Top</div>
+            <div class="css-btn css-br css-btn-azure cb-shadow cb-a cb-al">Left</div>
+        </div>
     </div>
 </body>
 </html>
