added group buttons

--- a/index.html
+++ b/index.html
@@ -70,6 +70,16 @@
             <div class="css-btn css-br css-btn-blue cb-g cb-shadow">Blue btn</div>
         </div>
         <div class="example">
+            <div class="title">Group buttons</div>
+            <div class="item">
+                <div class="cb-group">
+                    <div class="css-btn css-btn-blue css-br cb-g">Blue btn 1</div>
+                    <div class="css-btn css-btn-blue css-br cb-g">Blue btn 2</div>
+                    <div class="css-btn css-btn-blue css-br cb-g">Blue btn 3</div>
+                </div>
+            </div>
+        </div>
+        <div class="example">
             <div class="title">Animations</div>
             <div class="css-btn css-br css-btn-blue cb-shadow cb-a cb-at">Top</div>
             <div class="css-btn css-br css-btn-blue cb-shadow cb-a cb-al">Left</div>
