added classes for buttons

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <div class="example">
             <div class="title">Default btn</div>
             <div class="css-btn">Default btn</div>
+            <div class="code">
+                <xmp><button class="css-btn">Default btn</button>
+                </xmp>
+            </div>
         </div>
         <div class="example">
             <div class="title">Colors</div>
@@ -19,12 +23,25 @@
             <div class="css-btn css-btn-green">Green btn</div>
             <div class="css-btn css-btn-blue">Blue btn</div>
             <div class="css-btn css-btn-red">Red btn</div>
+            <div class="code">
+                <xmp><button class="css-btn css-btn-black">Black btn</button>
+                    <button class="css-btn css-btn-green">Green btn</button>
+                    <button class="css-btn css-btn-blue">Blue btn</button>
+                    <button class="css-btn css-btn-red">Red btn</button>
+                </xmp>
+            </div>
         </div>
         <div class="example">
             <div class="title">Border Radius</div>
             <div class="css-btn css-btn-blue css-br">Blue btn</div>
             <div class="css-btn css-btn-blue css-br-lg">Blue btn</div>
             <div class="css-btn css-btn-blue css-br-cc">+</div>
+            <div class="code">
+                <xmp><button class="css-btn css-btn-blue css-br">Blue btn</button>
+                <button class="css-btn css-btn-blue css-br-lg">Blue btn</button>
+                <button class="css-btn css-btn-blue css-br-cc">+</button>
+                </xmp>
+            </div>
         </div>
         <div class="example">
             <div class="title">Sizes</div>
@@ -34,6 +51,12 @@
                 <div class="css-btn css-btn-blue css-btn-sm css-br">Blue btn</div>
                 <div class="css-btn css-btn-blue css-btn-sm css-br-lg">Blue btn</div>
                 <div class="css-btn css-btn-blue css-btn-sm css-br-cc">+</div>
+                <div class="code">
+                    <xmp><<button class="css-btn css-btn-blue css-btn-sm">Blue btn</button>
+                    <button class="css-btn css-btn-blue css-btn-sm css-br">Blue btn</button>
+                    <button class="css-btn css-btn-blue css-btn-sm css-br-lg">Blue btn</button>
+                    <button class="css-btn css-btn-blue css-btn-sm css-br-cc">+</button></xmp>
+                </div>
             </div>
             <div class="item">
                 <div class="title">Default Buttons</div>
@@ -41,6 +64,12 @@
                 <div class="css-btn css-btn-blue css-br">Blue btn</div>
                 <div class="css-btn css-btn-blue css-br-lg">Blue btn</div>
                 <div class="css-btn css-btn-blue css-br-cc">+</div>
+                <div class="code">
+                    <xmp><button class="css-btn css-btn-blue">Blue btn</button>
+                    <button class="css-btn css-btn-blue css-br">Blue btn</button>
+                    <button class="css-btn css-btn-blue css-br-lg">Blue btn</button>
+                    <button class="css-btn css-btn-blue css-br-cc">+</button></xmp>
+                </div>
             </div>
             <div class="item">
                 <div class="title">Large Buttons</div>
@@ -48,6 +77,12 @@
                 <div class="css-btn css-btn-blue css-btn-lg css-br">Blue btn</div>
                 <div class="css-btn css-btn-blue css-btn-lg css-br-lg">Blue btn</div>
                 <div class="css-btn css-btn-blue css-btn-lg css-br-cc">+</div>
+                <div class="code">
+                    <xmp><button class="css-btn css-btn-blue css-btn-lg">Blue btn</button>
+                    <button class="css-btn css-btn-blue css-btn-lg css-br">Blue btn</button>
+                    <button class="css-btn css-btn-blue css-btn-lg css-br-lg">Blue btn</button>
+                    <button class="css-btn css-btn-blue css-btn-lg css-br-cc">+</button></xmp>
+                </div>
             </div>
         </div>
         <div class="example">
@@ -56,18 +91,34 @@
             <div class="css-btn css-br css-btn-green cb-g">Green btn</div>
             <div class="css-btn css-br css-btn-blue cb-g">Blue btn</div>
             <div class="css-btn css-br css-btn-red cb-g">Red btn</div>
+            <div class="code">
+                <xmp><button class="css-btn css-br css-btn-black cb-g">Black btn</button>
+                <button class="css-btn css-br css-btn-green cb-g">Green btn</button>
+                <button class="css-btn css-br css-btn-blue cb-g">Blue btn</button>
+                <button class="css-btn css-br css-btn-red cb-g">Red btn</button></xmp>
+            </div>
         </div>
         <div class="example">
             <div class="title">Active</div>
             <div class="css-btn css-btn-blue cb-active">Blue btn</div>
             <div class="css-btn css-br css-btn-blue cb-active">Blue btn</div>
             <div class="css-btn css-br css-btn-blue cb-g cb-active">Blue btn</div>
+            <div class="code">
+                <xmp><button class="css-btn css-btn-blue cb-active">Blue btn</button>
+                <button class="css-btn css-br css-btn-blue cb-active">Blue btn</button>
+                <button class="css-btn css-br css-btn-blue cb-g cb-active">Blue btn</button></xmp>
+            </div>
         </div>
         <div class="example">
             <div class="title">Shadow</div>
             <div class="css-btn css-btn-blue cb-shadow">Blue btn</div>
             <div class="css-btn css-br css-btn-blue cb-shadow">Blue btn</div>
             <div class="css-btn css-br css-btn-blue cb-g cb-shadow">Blue btn</div>
+            <div class="code">
+                <xmp><button class="css-btn css-btn-blue cb-shadow">Blue btn</button>
+                <button class="css-btn css-br css-btn-blue cb-shadow">Blue btn</button>
+                <button class="css-btn css-br css-btn-blue cb-g cb-shadow">Blue btn</button></xmp>
+            </div>
         </div>
         <div class="example">
             <div class="title">Group buttons</div>
@@ -77,12 +128,23 @@
                     <div class="css-btn css-btn-blue css-br cb-g">Blue btn 2</div>
                     <div class="css-btn css-btn-blue css-br cb-g">Blue btn 3</div>
                 </div>
+                <div class="code">
+                    <xmp><div class="cb-group">
+                    <button class="css-btn css-btn-blue css-br cb-g">Blue btn 1</button>
+                    <button class="css-btn css-btn-blue css-br cb-g">Blue btn 2</button>
+                    <button class="css-btn css-btn-blue css-br cb-g">Blue btn 3</button>
+                </div></xmp>
+                </div>
             </div>
         </div>
         <div class="example">
             <div class="title">Animations</div>
             <div class="css-btn css-br css-btn-blue cb-shadow cb-a cb-at">Top</div>
             <div class="css-btn css-br css-btn-blue cb-shadow cb-a cb-al">Left</div>
+            <div class="code">
+                <xmp><button class="css-btn css-br css-btn-blue cb-shadow cb-a cb-at">Top</button>
+                <button class="css-btn css-br css-btn-blue cb-shadow cb-a cb-al">Left</button></xmp>
+            </div>
         </div>
     </div>
 </body>
