added download button

--- a/index.html
+++ b/index.html
@@ -146,6 +146,11 @@
                 <button class="css-btn css-br css-btn-blue cb-shadow cb-a cb-al">Left</button></xmp>
             </div>
         </div>
+
+        <div style="margin: 30px 0; text-align: center;">
+            <a href="https://raw.githubusercontent.com/tokovenko/css-btns/master/dist/css/css-btns.min.css"
+               class="css-btn css-btn-red css-btn-lg css-br cb-g">Download</a>
+        </div>
     </div>
 </body>
 </html>
